roll animations finally working

--- a/home.html
+++ b/home.html
@@ -195,7 +195,20 @@ setup();
 var pickOrder = [];
 var threeRolls = [0,0,0];
 var combinationRolls = [];
-var roll = 0;
+var teamOddsMap = {
+    "Team 1"  :  435, 
+    "Team 2"  :  265, 
+    "Team 3"  :  165, 
+    "Team 4"  :  095, 
+    "Team 5"  :  40, 
+    "Team 6"  :  0, 
+    "Team 7"  :  0, 
+    "Team 8"  :  0, 
+    "Team 9"  :  0, 
+    "Team 10" :  0, 
+    "Team 11" :  0, 
+    "Team 12" :  0
+  };
 
 $('#master').click(function() {
   document.getElementById("roll1").disabled = false;
@@ -211,16 +224,16 @@ $('#reset').click(function() {
 });
 
 $('#roll1').click(function() {
-  rollNumber(0, function() { firstRollLogic() } );
+  rollNumber(0);
 });
 
 $('#roll2').click(function() {
-  rollNumber(1, function() { secondRollLogic() } );
+  rollNumber(1);
   
 });
 
 $('#roll3').click(function() {
-  rollNumber(2, function() { finalRollLogic() } );
+  rollNumber(2);
 });
 
 
@@ -244,45 +257,30 @@ function setup() {
   document.getElementById("bigNumber0").textContent = "?";
   document.getElementById("bigNumber1").textContent = "?";
   document.getElementById("bigNumber2").textContent = "?";
-  var teamsOddsMap = {
-    "Team 1" : .435, 
-    "Team 2" : .265, 
-    "Team 3" : .165, 
-    "Team 4" : .095, 
-    "Team 5" : .04, 
-    "Team 6" : 0, 
-    "Team 7" : 0, 
-    "Team 8" : 0, 
-    "Team 9" : 0, 
-    "Team 10" : 0, 
-    "Team 11" : 0, 
-    "Team 12" : 0
-  };
+  
 }
 
-// function rollNumber(nRoll, callback) {
-//   var elementId = "bigNumber" + nRoll.toString();
-//   for (var i = 0; i < 800; i++) {
-//   setTimeout(
-//     (function (i){
-      
-//         threeRolls[nRoll] = Math.floor(Math.random()*10);
-//         document.getElementById(elementId).textContent = threeRolls[nRoll];
-      
-//     })(i), i*50)
-//   }
-
-//   callback();
-// }
-function rollNumber(nRoll, callback) {
+function rollNumber(nRoll) {
   var elementId = "bigNumber" + nRoll.toString();
   threeRolls[nRoll] = Math.floor(Math.random()*10);
   var elem = document.getElementById(elementId);
   var id = setInterval(roll, 100);
+  var count = 0;
   function roll() {
-    threeRolls[nRoll] = Math.floor(Math.random()*10);
-    clearInterval(id);
-    elem.textContent = threeRolls[nRoll];
+    if (count > 10) {
+      clearInterval(id);
+      if (nRoll == 0) {
+        firstRollLogic();
+      } else if (nRoll == 1) {
+        secondRollLogic();
+      } else {
+        finalRollLogic();
+      }
+    } else {
+      count++;
+      threeRolls[nRoll] = Math.floor(Math.random()*10);
+      elem.textContent = threeRolls[nRoll];
+    }
   }
 }
 
@@ -296,7 +294,34 @@ function secondRollLogic() {
   document.getElementById("roll2").disabled = true;
 }
 function finalRollLogic() {
-  console.log(threeRolls);
+  var possibleNewCombo = parseInt("" + threeRolls[0] + threeRolls[1] + threeRolls[2]);
+  var possibleNewTeam =  determineTeamFromCombo(possibleNewCombo);
+  document.getElementById("master").disabled = false;
+  if (pickOrder.indexOf(possibleNewTeam) >= 0) {
+    //Do the roll again
+  } else {
+    //Its a new combo
+    pickOrder.push(possibleNewTeam);
+    document.getElementById("place" + pickOrder.length).textContent = possibleNewTeam;
+    // document.getElementById("master").textContent = "Begin\r\nRolling\r\nfor\r\n2nd Pick"
+
+  }
+}
+
+function determineTeamFromCombo(combo) {
+  if (combo < teamOddsMap["Team 1"]) {
+    return "Team 1";
+  } else if (combo < teamOddsMap["Team 1"] + teamOddsMap["Team 2"]) {
+    return "Team 2";
+  } else if (combo < teamOddsMap["Team 1"] + teamOddsMap["Team 2"] + teamOddsMap["Team 3"]) {
+    return "Team 3";
+  } else if (combo < teamOddsMap["Team 1"] + teamOddsMap["Team 2"] + teamOddsMap["Team 3"] + teamOddsMap["Team 4"]) {
+    return "Team 4";
+  } else if (combo < teamOddsMap["Team 1"] + teamOddsMap["Team 2"] + teamOddsMap["Team 3"] + teamOddsMap["Team 4"] + teamOddsMap["Team 5"]) {
+    return "Team 5";
+  } else {
+    throw "InvalidCombination";
+  }
 }
 
 </script>
